feat: GitHubレートリミット情報を画面上に表示する機能を追加

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "@octokit/graphql": "^9.0.1"
   }
-} 
+}
