--- a/backend/package.json
+++ b/backend/package.json
@@ -9,17 +9,18 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@octokit/graphql": "^9.0.1",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.0",
+    "express": "^4.18.2",
     "moment": "^2.29.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.8.0",
-    "typescript": "^5.2.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
-} 
+}
