--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@types/moment": "^2.13.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "ajv": "^8.17.1",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
+    "moment": "^2.29.4",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.2.2",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
-    "axios": "^1.6.0",
-    "moment": "^2.29.4",
-    "@types/moment": "^2.13.0",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,4 +45,4 @@
     ]
   },
   "proxy": "http://localhost:3001"
-} 
+}
